--- a/app/highvol/package.json
+++ b/app/highvol/package.json
@@ -19,6 +19,13 @@
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
+    "karma": "^0.12.31",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "mocha": "^2.2.4",
+    "requirejs": "^2.1.17",
     "shelljs": "^0.4.0"
   },
   "cordovaPlugins": [
