--- a/app/highvol/package.json
+++ b/app/highvol/package.json
@@ -20,10 +20,12 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "karma": "^0.12.31",
+    "karma-growl-reporter": "^0.1.1",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "^0.2.2",
     "karma-safari-launcher": "^0.1.1",
+    "karma-spec-reporter": "0.0.19",
     "mocha": "^2.2.4",
     "requirejs": "^2.1.17",
     "shelljs": "^0.4.0"
