--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
   - '0.11'
 before_script:
   - cd app/highvol/
-  - npm install -g bower gulp-cli
+  - npm install -g bower gulp
   - bower install
 script: gulp test
