--- a/app/highvol/package.json
+++ b/app/highvol/package.json
@@ -20,7 +20,9 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "karma": "^0.12.31",
+    "karma-cli": "0.0.4",
     "karma-growl-reporter": "^0.1.1",
+    "karma-jasmine": "^0.3.5",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "^0.2.2",
